--- a/basicAuth/views/layout.hbs
+++ b/basicAuth/views/layout.hbs
@@ -10,16 +10,17 @@
   </head>
 
   <body>
-    {{!-- <nav>
+<nav>
       <ul>
         <li id="to-left">
           <p><a href="/"> Users - demo </a></p>
         </li>
         <li id="to-right">
           <a href="/signup">Signup</a> <span> | </span>
+              <a href="/login">login</a>
         </li>
       </ul>
-    </nav> --}}
+    </nav>
 
     {{{body}}}
 
